fixed clipping

--- a/frontEnd/src/app/header/header.component.scss
+++ b/frontEnd/src/app/header/header.component.scss
@@ -110,7 +110,8 @@ nav {
   width: 100%;
   top: 0;
   z-index: 1;
-  padding-bottom: 170px;
+  //TODO find a better way
+  padding-bottom: 158px;
   border-bottom-left-radius: 500px ;
   border-bottom-right-radius: 500px ;
 }
